--- a/POSApp.UI/POSApp.UI.csproj
+++ b/POSApp.UI/POSApp.UI.csproj
@@ -2,11 +2,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Identity.Client" Version="4.72.0" />
+    <PackageReference Include="ZedGraph" Version="5.1.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\POSApp.Core\POSApp.Core.csproj" />
     <ProjectReference Include="..\POSApp.Data\POSApp.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="images\" />
   </ItemGroup>
 
   <PropertyGroup>
